tdf#105520: "Selection Count" does not appear on Status bar when selected

Change-Id: I6ade03b39aeafffa08cfbfcca4739cfe5a73d4ac
Reviewed-on: https://gerrit.libreoffice.org/33561
Reviewed-by: Tamás Zolnai <tamas.zolnai@collabora.com>
Tested-by: Tamás Zolnai <tamas.zolnai@collabora.com>